@@ -1,5 +1,6 @@
 Feb 02, 2023
   CurationGeneGenerator -- upgraded to linkml_model 1.5.0
+  CurationAGMGenerator -- upgraded to linkml_model 1.5.0
 
 Dec 05, 2022
   CurationAlleleGenerator -- linkml_model 1.3.2: added export of 'references'
